adding JAWSDB_URL to config.json

--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
     "database": "closetohome_personal",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "operatorsAliases": false,
+    "use_env_variable": "JAWSDB_URL"
   }
 }
