--- a/config/config.json
+++ b/config/config.json
@@ -16,12 +16,7 @@
     "operatorsAliases": false
   },
   "production": {
-    "username": "root",
-    "password": "",
-    "database": "closetohome_personal",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false,
-    "use_env_variable": "JAWSDB_URL"
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
 }
